--- a/reelreview/src/css/csMain/CsMain.module.css
+++ b/reelreview/src/css/csMain/CsMain.module.css
@@ -18,19 +18,18 @@
 }
 
 .CsMain_header_logo_wrapper {
-  width: 20%;
-  height: 50px;
+  width: 180px;
+  height: 35px;
   margin-right: 55%;
-  background-image: url("../../img/Header/Reel_Review_logo.png");
-  background-size: contain;
-  background-repeat: no-repeat;
+  justify-content: center;
 }
 
 .CsMain_header_logo {
   width: 100%;
-  height: 50px;
+  height: 100%;
   background-image: url("../../img/Header/Reel_Review_logo.png");
-  background-size: contain;
+  background-position: center;
+  background-size: 180px 35px;
   background-repeat: no-repeat;
 }
 
@@ -62,8 +61,8 @@
 }
 
 .CsMain_big_logo {
-  width: 60%;
-  height: 180px;
+  width: 25%;
+  height: 25%;
   justify-content: center;
   display: flex;
   background-image: url("../../img/Header/Reel_Review_logo_cs.png");
