--- a/reelreview/src/css/Header/LoginSuccess_header.module.css
+++ b/reelreview/src/css/Header/LoginSuccess_header.module.css
@@ -55,21 +55,21 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 220px;
-    height: 40px;
+    width: 100%;
+    height: 35px;
     background-size: 16px;
     background-image: url("../../img/Header/search_icon.svg");
     background-repeat: no-repeat;
     background-color: #F5F5F7;
-    background-position: 15px 50%;
+    background-position: 15px;
 }
 
 .findWrapper input {
-    width: 80%;
+    width: 100%;
     height: 25px;
     border: none;
     background: none;
-    margin-left: 30px;
+    margin-left: -30px;
 }
 
 .findWrapper input:focus {
