--- a/reelreview/src/css/Header/LoginSuccess_header_noneBackground.module.css
+++ b/reelreview/src/css/Header/LoginSuccess_header_noneBackground.module.css
@@ -54,21 +54,21 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 220px;
-    height: 40px;
+    width: 100%;
+    height: 35px;
     background-size: 16px;
     background-image: url("../../img/Header/search_icon.svg");
     background-repeat: no-repeat;
-    background-position: 15px 50%;
+    background-position: 15px;
     border: 1px solid rgba(255, 255, 255, 0.25);
 }
 
 .findWrapper_input {
-    width: 80%;
+    width: 100%;
     height: 25px;
     border: none;
     background: none;
-    margin-left: 30px;
+    margin-left: -30px;
 }
 
 .findWrapper_input::placeholder {
