--- a/reelreview/src/css/details/CommentDetail.module.css
+++ b/reelreview/src/css/details/CommentDetail.module.css
@@ -47,21 +47,25 @@
     letter-spacing: -0.6px;
     line-height: 21px;
 }
-.collection_title p{
+
+.collection_title p {
     font-size: 13px;
     font-weight: 400;
     line-height: 18px;
     color: #8c8c8c;
 }
-.col_title_bot_small{
+
+.col_title_bot_small {
     margin-top: 15px;
 
 }
-.col_title_bot_small p{
+
+.col_title_bot_small p {
     float: left;
     margin-right: 5px;
 }
-.col_title_bot_small span{
+
+.col_title_bot_small span {
     float: left;
     margin-right: 15px;
     font-size: 12px;
@@ -70,15 +74,18 @@
     color: #1c1d1f;
 }
 
-.col_title_button{
+.col_title_button {
     margin: 45px auto;
     width: 1280px;
     height: 43px;
-    border-top: 1px solid rgba(80,80,80,0.5);
-    border-bottom: 1px solid rgba(80,80,80,0.5);
+    border-top: 1px solid rgba(80, 80, 80, 0.5);
+    border-bottom: 1px solid rgba(80, 80, 80, 0.5);
     padding: 3px 0 5px 0;
 }
-.col_title_button_like,.col_title_button_comment,.col_title_button_sns{
+
+.col_title_button_like,
+.col_title_button_comment,
+.col_title_button_sns {
     width: 33%;
     text-align: center;
     align-items: center;
@@ -86,7 +93,10 @@
     cursor: pointer;
     display: inline-block;
 }
-.col_title_button_like p,.col_title_button_comment p,.col_title_button_sns p{
+
+.col_title_button_like p,
+.col_title_button_comment p,
+.col_title_button_sns p {
     font-size: 13px;
     color: rgb(140, 140, 140);
     display: inline-block;
@@ -94,12 +104,14 @@
     letter-spacing: -0.2px;
     margin-left: 5px;
 }
-.ThumbsUp{
-    font-size:15px ;
-    color:rgb(140, 140, 140);
+
+.ThumbsUp {
+    font-size: 15px;
+    color: rgb(140, 140, 140);
     line-height: 50px;
 
 }
+
 .commentArea {
     margin-top: 20px;
 
@@ -108,7 +120,9 @@
     letter-spacing: -0.2px;
     line-height: 24px;
 }
-.col_title_button_like:after, .col_title_button_comment:after{
+
+.col_title_button_like:after,
+.col_title_button_comment:after {
     content: '|';
     display: inline-block;
     position: relative;
@@ -116,7 +130,8 @@
     font-size: 15px;
     color: rgb(240, 240, 240);
 }
-.col_title_button_sns:after{
+
+.col_title_button_sns:after {
     content: '|';
     display: inline-block;
     position: relative;
@@ -124,9 +139,10 @@
     font-size: 15px;
     color: transparent;
 }
+
 .col_title_button_like:hover,
 .col_title_button_comment:hover,
-.col_title_button_sns:hover{
+.col_title_button_sns:hover {
     background-color: rgb(240, 240, 240);
     border-radius: 8px;
     transition: 0.5s;
@@ -136,59 +152,69 @@
     margin: 0 20px;
     height: 40px;
 }
-.comments{
+
+.comments {
     margin: 0px auto;
     width: 1320px;
     border-top: 1px solid rgba(0, 0, 0, 0.06);
     border-bottom: 1px solid rgba(0, 0, 0, 0.06);
 }
-.comments h1{
+
+.comments h1 {
     margin: 20px 20px;
 }
 
-.commentcommentBox{
-    border-bottom: 1px solid rgba(0, 0, 0, 0.06);;
+.commentcommentBox {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.06);
+    ;
     width: 1320px;
     display: flex;
     margin: 0 auto;
     padding: 15px;
 }
-.ccImgBox{
+
+.ccImgBox {
     float: left;
     width: 32px;
     height: 100%;
     margin-left: 20px;
 }
-.ccimg{
+
+.ccimg {
     margin: 0px auto;
     width: 32px;
     height: 32px;
     border-radius: 32px;
 }
-.ccDetail{
+
+.ccDetail {
     width: 100%;
     margin-bottom: 15px;
 }
-.ccDetailTop{
+
+.ccDetailTop {
     width: 100%;
     height: 18px;
 }
-.ccName{
+
+.ccName {
     float: left;
     font-size: 14px;
     font-weight: 700;
     letter-spacing: -0.3px;
     line-height: 18px;
     margin-left: 10px;
-    color:rgba(0, 0, 0, 0.8);
+    color: rgba(0, 0, 0, 0.8);
 }
-.ccDate{
+
+.ccDate {
     float: right;
     color: gray;
     font-size: 12px;
     margin-right: 35px;
 }
-.ccDetailMiddle{
+
+.ccDetailMiddle {
     width: 100%;
     color: rgb(74, 74, 74);
     font-size: 15px;
@@ -201,38 +227,46 @@
     margin-bottom: 8px;
     margin-left: 9px;
 }
-.ccDetailBottom{
+
+.ccDetailBottom {
     width: 100%;
 }
-.ccBottomLeft{
+
+.ccBottomLeft {
     margin-left: 9px;
     font-size: 12px;
     cursor: pointer;
     float: left;
 
 }
-.ccLike{
+
+.ccLike {
     margin-right: 6px;
 }
-.dots{
+
+.dots {
     font-size: 12px;
     color: gray;
 }
-.ccBottomRight{
+
+.ccBottomRight {
     float: right;
     margin-right: 20px;
 }
-.ccnewComment{
+
+.ccnewComment {
     text-align: center;
     width: 1320px;
     height: 40px;
     margin: 18px auto;
 }
-.ccInput{
+
+.ccInput {
     width: 1000px;
     display: inline-block;
 }
-.ccInput input{
+
+.ccInput input {
     color: rgb(74, 74, 74);
     font-size: 14px;
     font-weight: 400;
@@ -245,12 +279,14 @@
     border-radius: 6px;
     -webkit-box-flex: 1;
 }
-.ccButton{
+
+.ccButton {
     width: 82px;
     float: right;
     margin-right: 100px;
 }
-.button{
+
+.button {
     display: flex;
     -webkit-box-align: center;
     align-items: center;
@@ -267,28 +303,32 @@
     margin-left: 0px;
     cursor: pointer;
 }
-.bubble{
+
+.bubble {
     margin-right: 5px;
 }
 
-.commentTitle{
+.commentTitle {
     width: 1320px;
     height: 40px;
     margin-top: 10px;
 }
-.cmImgBox{
+
+.cmImgBox {
     float: left;
     width: 40px;
     height: 100%;
     margin-left: 15px;
 }
-.cmImg{
+
+.cmImg {
     margin: 0px auto;
     width: 40px;
     height: 40px;
     border-radius: 32px;
 }
-.cmName{
+
+.cmName {
     height: 40px;
     float: left;
     font-size: 17px;
@@ -296,49 +336,51 @@
     margin-left: 5px;
     letter-spacing: -0.3px;
     line-height: 40px;
-    color:rgba(0, 0, 0, 0.8);
+    color: rgba(0, 0, 0, 0.8);
 }
+
 .modalWrapper {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
+    background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 9999; /* Ensure the modal is on top of other content */
+    z-index: 9999;
+}
 
-  }
 .modal {
     background-color: #fff;
     padding: 15px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    max-width: 90%; /* Limit the modal's maximum width */
-    position: fixed; /* Keep the modal fixed on the screen */
-    top: 50%; /* Position the modal vertically at 50% from the top */
-    left: 50%; /* Position the modal horizontally at 50% from the left */
-    transform: translate(-50%, -50%); /* Center the modal */
-  }
-  .modalContent {
+    max-width: 90%;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.modalContent {
     text-align: center;
-  }
-  
-  .modalContent h2 {
+}
+
+.modalContent h2 {
     margin-bottom: 10px;
     font-size: 20px;
     text-align: left;
-  }
-  
-  .modalContent form {
+}
+
+.modalContent form {
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-  
-  .modalContent textarea {
+}
+
+.modalContent textarea {
     width: 100%;
     height: 500px;
     max-width: 400px;
@@ -346,19 +388,19 @@
     resize: vertical;
     padding: 5px;
     border: none;
-  }
-  
-  .submitButtonContainer {
+}
+
+.submitButtonContainer {
     position: absolute;
     display: flex;
     bottom: 10px;
-    right: 10px; /* Move the button to the right */
-  }
-  
-  .closeButton {
+    right: 10px;
+}
+
+.closeButton {
     display: flex;
-  justify-content: center;
-  align-items: center;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     width: 30px;
     height: 30px;
@@ -370,14 +412,13 @@
     color: #555;
     font-size: 20px;
     cursor: pointer;
-    
-  }
-  
-  .submitButton {
+}
+
+.submitButton {
     background-color: #007bff;
     color: #fff;
     border: none;
     padding: 8px 20px;
     cursor: pointer;
     border-radius: 4px;
-  }
+}
