--- a/reelreview/src/css/details/Detail_num4.module.css
+++ b/reelreview/src/css/details/Detail_num4.module.css
@@ -4,11 +4,13 @@
     overflow: hidden;
     height: auto;
 }
+
 .topHead{
     margin: 70px auto 0 auto;
-    width: 1320px;
+    width: 100%;
     height: 30px;
 }
+
 .topHead h2{
     font-size: 24px;
     font-family: 'Noto Sans Kr';
@@ -16,6 +18,7 @@
     line-height: 28px;
     float: left;
 }
+
 .topHead h3{
     font-size: 24px;
     font-family: 'Noto Sans Kr';
@@ -25,9 +28,10 @@
     float: left;
     margin-left: 10px;
 }
+
 .cont{
     margin: 30px auto;
-    width: 1320px;
+    width: 100%;
     height: auto;
     overflow: hidden;
 }
@@ -36,6 +40,7 @@
     float: left;
     margin: 0px 10px 10px 0px;
 }
+
 .card{
     width: 295px;
     height: 300px;
@@ -43,15 +48,18 @@
     background-color: rgb(242, 242, 242);
     border-radius: 15px;
 }
+
 .cardTop{
     border-bottom: 1px solid rgb(229, 229, 229);
     height: 57px;
 }
+
 .cardTopLeft{
     height: 56px;
     width: 180px;
     float: left;
 }
+
 .cardTopLeft p{
     height: 100%;
     display: flex;
@@ -64,6 +72,7 @@
     letter-spacing: -0.7px;
     line-height: 22px;
 }
+
 .cardImg{
     width: 32px;
     height: 32px;
@@ -72,9 +81,11 @@
     float: left;
     border-radius: 5px;
 }
+
 .cardTopRight{
     float: right;
 }
+
 .cardStars{
     background-color: rgb(255, 255, 255);
     
@@ -85,6 +96,7 @@
     padding: 0 8px;
     height: 28px;
 }
+
 .cardStars p{
     color: rgb(74, 74, 74);
     font-size: 14px;
@@ -94,23 +106,25 @@
     font-family: "Noto Sans KR",  sans-serif;
     float: right;
 }
+
 .stars{
     margin-top: 3px;
     float: left;
 }
+
 .cardMiddle{
     height: 195px;
     overflow: hidden;
 }
+
 .cardMiddle a{
     text-decoration: none;
 }
+
 .comment{
     margin: 12px 0 12px 0;
-
-
-    
 }
+
 .comment p{
     font-size: 15px;
     font-family: "Noto Sans KR",  sans-serif;
@@ -119,7 +133,6 @@
     letter-spacing: -0.2px;
     color: black;
 }
-
 
 .cardBottom{
     height: 30px;
@@ -133,13 +146,16 @@
     margin-top: 10px;
     font-family: "Noto Sans KR",  sans-serif;
 }
+
 .cardBottom span{
     margin-right: 7px;
 }
+
 .cardBottom p{
     margin-right: 20px;
     line-height: 20px;
 }
+
 .colby{
     margin-bottom: 10px;
 }
