--- a/reelreview/src/css/details/Detail_num6.module.css
+++ b/reelreview/src/css/details/Detail_num6.module.css
@@ -2,16 +2,16 @@
     width: 100%;
     margin-top: 10px;
     background-color: white;
-    
     overflow: hidden;
     height: auto;
-
 }
+
 .topHead{
     margin: 0 auto;
-    width: 1320px;
+    width: 100%;
     height: 30px;
 }
+
 .topHead h2{
     font-size: 24px;
     font-family: 'Noto Sans Kr';
@@ -19,6 +19,7 @@
     line-height: 28px;
     float: left;
 }
+
 .topHead h3{
     font-size: 24px;
     font-family: 'Noto Sans Kr';
@@ -28,9 +29,9 @@
     float: left;
     margin-left: 10px;
 }
+
 .gallery{
-    width: 1320px;
- 
+    width: 100%;
     height: auto;
     margin: 30px auto;
     text-align: center;
@@ -43,8 +44,8 @@
     margin: 0 10px 0 0;
     text-align: center;
     padding-top: 5px;
-
 }
+
 .colImg{
     width: 45%;
     height: 48%;
@@ -53,11 +54,13 @@
     border-radius: 5px;
     display: inline-block;
 }
+
 .colImg img{
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+
 .colBox h4{
     font-size: 15px;
     word-break: break-all;
@@ -68,6 +71,7 @@
     text-align: left;
     margin-top: 5px;
 }
+
 .colBox p{
     color: #8c8c8c;
     font-size: 13px;
@@ -77,13 +81,16 @@
     margin-top: 2px;
     text-align: left;
 }
+
 .similar{
-    width: 1320px;    
+    width: 100%;    
     margin: 0 auto;
 }
+
 .similar_row{
     width: 100%;
 }
+
 .similar_col{
     cursor: pointer;
     width: 200px;
@@ -93,24 +100,29 @@
     text-overflow: ellipsis;
     white-space : nowrap;
 }
+
 .similar_col a{
     text-decoration: none;
 }
+
 .similar_col_img img{
     width: 200px;
     height: 294px;
     border-radius: 10px;
     object-fit: cover;
 }
+
 .similar_col_title{
     margin-top: 10px;
 }
+
 .similar_col_title h4{
     font-size: 16px;
     font-weight: 700;
     letter-spacing: -0.3px;
     line-height: 22px;
 }
+
 .similar_col_title p{
     color: rgb(120, 120, 120);
     font-size: 13px;
@@ -119,6 +131,7 @@
     line-height: 18px;
     white-space: nowrap;
 }
+
 .similar_col_title span{
     color: rgb(160, 160, 160);
     font-size: 12px;
