--- a/reelreview/src/css/details/Detail_top.module.css
+++ b/reelreview/src/css/details/Detail_top.module.css
@@ -1,9 +1,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap');
+
 .detail_first{
     background-size:cover;
 }
-
 
 .detail_movie_back{
     margin-top: 0;
@@ -11,14 +11,15 @@
     height: 100%;
     background: rgb(0,0,0);
     background: linear-gradient(180deg, rgba(0,0,0,0.7) 0%, rgba(255,255,255,0) 37%, rgba(0,0,0,0.7) 100%);
-
 }
+
 .detail_movie_top{
-    width: 1320px;
+    width: 100%;
     padding-top: 340px;
     margin :  auto;
     color: white;
 }
+
 .detail_movie_top h1{
     margin-bottom: 0;
     margin-top: 0;
@@ -26,12 +27,13 @@
     font-weight: 800;
     line-height: 36px;
 }
-.detail_movie_top_inEn{
 
+.detail_movie_top_inEn{
     margin-top: 18px;
     font-size: 14px;
     font-weight: 700;
 }
+
 .openDate_genre_country{
     width: 100%;
     margin-top: 13px;
@@ -39,25 +41,29 @@
     font-size: 14px;
     height: 16px;
 }
+
 .openDate{
     float: left;
     margin-right: 10px;
 }
+
 .genre{
     float : left;
     margin-right: 10px;
 }
+
 .genre ::before{
     content: "·";
     color: white;
 }
+
 .country {
     float: left;
 }
+
 .country ::before{
     float : left;
 }
-
 
 .playTime_ageRating{
     width: 100%;
@@ -66,13 +72,16 @@
     font-size: 14px;
     height: 16px;
 }
+
 .playTime{
     float: left;
     margin-right: 10px;
 }
+
 .ageRating{
     float: left;
 }
+
 .boxOfficeData{
     width: 100%;
     margin-top: 13px;
@@ -80,10 +89,12 @@
     font-size: 14px;
     height: 16px;
 }
+
 .boxOfficePercent{
     float: left;
     margin-right: 10px;
 }
+
 .timeSinceOpen{
     float: left;
     margin-right: 10px;
