--- a/reelreview/src/css/Header/LoginSuccess_header.module.css
+++ b/reelreview/src/css/Header/LoginSuccess_header.module.css
@@ -95,9 +95,9 @@
     width: 35px;
     height: 35px;
     color: black;
-    border: solid 1px rgba(0,0,0,0.08);
     border-radius: 50%;
     background: #fff;
+    object-fit: cover;
   }
 
   .nameLi {
