--- a/reelreview/src/css/profile/UserProfile.module.css
+++ b/reelreview/src/css/profile/UserProfile.module.css
@@ -68,6 +68,7 @@
     /* border: 1px solid black; */
     border-radius: 50%;
     margin-left: 30px;
+    object-fit: cover;
 }
 
 .userInfo .profilePic:hover .profilePicHover {
