--- a/reelreview/src/css/Header/LoginSuccess_header.module.css
+++ b/reelreview/src/css/Header/LoginSuccess_header.module.css
@@ -88,13 +88,14 @@
     align-items: center;
     justify-content: center;
     text-decoration: none;
-    margin-left: 30px;
+    margin-left: 7px;
   }
 
   .icon {
     width: 35px;
     height: 35px;
-    color: black;
+    position: relative;
+    top: 2px;
     border-radius: 50%;
     background: #fff;
     object-fit: cover;
@@ -103,7 +104,7 @@
   .nameLi {
     font-size: 14px;
     color: #4C4C4C;
-    margin-right: 20px;
+    margin-right: 15px;
     cursor: pointer;
   }
 
