--- a/reelreview/src/css/Header/LoginSuccess_header_noneBackground.module.css
+++ b/reelreview/src/css/Header/LoginSuccess_header_noneBackground.module.css
@@ -96,13 +96,14 @@
     align-items: center;
     justify-content: center;
     text-decoration: none;
-    margin-left: 30px;
+    margin-left: 7px;
   }
 
   .icon {
     width: 35px;
     height: 35px;
-    color: black;
+    position: relative;
+    top: 2px;
     border-radius: 50%;
     background: #fff;
     object-fit: cover;
@@ -111,7 +112,7 @@
   .nameLi {
     font-size: 14px;
     color: rgba(255, 255, 255, 0.7);
-    margin-right: 20px;
+    margin-right: 15px;
     cursor: pointer;
   }
 
