--- a/reelreview/src/css/main/Mainpage.module.css
+++ b/reelreview/src/css/main/Mainpage.module.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&family=Roboto&display=swap');
 
-.MainPage_box{
-    width: 100%;
-    margin-top: 62px;
-    min-height: 100vh;
-    background-color: white;
-    border-top: 1px solid #ddd;
-    flex-direction: column;
+.MainPage_box {
+  width: 100%;
+  margin-top: 62px;
+  min-height: 100vh;
+  background-color: white;
+  border-top: 1px solid #ddd;
+  flex-direction: column;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 
@@ -32,14 +33,19 @@
 }
 
 .Footer {
-  margin-top: auto; /* Push the footer to the bottom of the container */
+  margin-top: auto;
+  /* Push the footer to the bottom of the container */
   width: 100%;
-  background-color: #f2f2f2; /* Add a background color for the footer */
+  background-color: #f2f2f2;
+  /* Add a background color for the footer */
   padding: 20px;
   border-top: 1px solid #ddd;
 }
 
 .BoxOffice_box_header {
+  position: relative;
+  left: 15px;
+  margin-bottom: -10px;
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -63,22 +69,30 @@
   height: 370px;
 
 }
-.BoxOffice_bottom{
+
+.BoxOffice_bottom {
+  position: relative;
+  top: 5px;
   text-overflow: ellipsis;
-  white-space : nowrap;
+  white-space: nowrap;
   overflow: hidden;
   width: 85%;
 }
 
-.BoxOffice_bottoms{
+.BoxOffice_bottoms {
+  width: 88%;
+  position: relative;
+  top: 5px;
   margin-left: 20px;
-  color: black;
+  color: gray;
   font-size: 11px;
+  overflow: auto;
 }
 
-.BoxOffice_box_header h3 {
-  margin-left: 20px;
-  color: black;
+.BoxOffice_bottoms h3 {
+  color: rgb(120, 120, 120);
+  font-size: 12px;
+  font-weight: normal;
 }
 
 .BoxOffice_poster {
@@ -90,12 +104,15 @@
   cursor: pointer;
   position: relative;
   object-fit: cover;
-  
+
 }
-.BoxOffice_img{
+
+.BoxOffice_img {
+  border-radius: 5px;
   height: 100%;
   width: 90%;
 }
+
 .BoxOffice_content {
   width: 100%;
   height: 380px;
@@ -104,7 +121,7 @@
   justify-content: center;
 }
 
-.BoxOffice_content > img {
+.BoxOffice_content>img {
   width: 90%;
   height: 100%;
 }
@@ -124,127 +141,129 @@
   left: 20px;
   top: 5px;
   background-color: rgba(0, 0, 0, 0.77);
-  border-radius: 25%; 
+  border-radius: 25%;
   color: rgb(255, 255, 255);
-  padding: 6px; 
+  padding: 6px;
   font-size: small;
   z-index: 9999;
-  width: 20px; 
-  height: 20px; 
+  width: 20px;
+  height: 20px;
   align-items: center;
   justify-content: center;
 }
+
 /* 박스 오피스 끝 */
 
 /* 개봉예정작 시작 */
 
 .Upcomming_box_wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 80%;
-    margin-left: 10%;
-    justify-content: flex-start;
-    margin-top: 50px;
-  }
-  
-  .Upcomming_box {
-    display: flex;
-    width: 100%;
-    flex-wrap: wrap;
-    justify-content: center;
-    justify-content: flex-start;
-    height: 500px;
-    flex-direction: column;
-  }
-  
-  .Upcomming_box_header {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    width: 100%;
-    flex: 1;
-  }
-  
-  .Upcomming_box_info {
-    width: 100%;
-    flex: 9;
-    margin-top: 10px;
-  }
-
-  .Upcomming_mainBox {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 80%;
+  margin-left: 10%;
+  justify-content: flex-start;
+  margin-top: 50px;
 }
-  
-  .Upcomming_box_header h3 {
-    margin-left: 20px;
-    color: black;
-  }
-  
-  .Upcomming_poster {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-    position: relative;
-  }
 
-  .Upcomming_content {
-    width: 100%;
-    height: 380px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+.Upcomming_box {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: center;
+  justify-content: flex-start;
+  height: 500px;
+  flex-direction: column;
+}
 
-.Upcomming_content > img {
-    width: 90%;
-    height: 100%;
-  }
+.Upcomming_box_header {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
+  flex: 1;
+}
+
+.Upcomming_box_info {
+  width: 100%;
+  flex: 9;
+  margin-top: 10px;
+}
+
+.Upcomming_mainBox {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+}
+
+.Upcomming_box_header h3 {
+  margin-left: 20px;
+  color: black;
+}
+
+.Upcomming_poster {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  position: relative;
+}
+
+.Upcomming_content {
+  width: 100%;
+  height: 380px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.Upcomming_content>img {
+  width: 90%;
+  height: 100%;
+}
 
 
 .Upcomming_bottom {
-    display: flex;
-    flex-direction: column;
-    color: black;
-    font-size: small;
-    padding-left: 20px;
+  display: flex;
+  flex-direction: column;
+  color: black;
+  font-size: small;
+  padding-left: 20px;
 }
 
-.Upcomming_bottom{
+.Upcomming_bottom {
   text-overflow: ellipsis;
-  white-space : nowrap;
+  white-space: nowrap;
   overflow: hidden;
   width: 85%;
 }
 
-.Upcomming_bottoms{
+.Upcomming_bottoms {
   color: black;
   font-size: 11px;
 }
+
 .Upcomming_number {
-    display: flex;
-    position: absolute;
-    left: 20px;
-    top: 5px;
-    background-color: rgba(0, 0, 0, 0.77);
-    border-radius: 25%; 
-    color: rgb(255, 255, 255);
-    padding: 6px; 
-    font-size: small;
-    z-index: 9999;
-    width: 20px; 
-    height: 20px; 
-    align-items: center;
-    justify-content: center;
-  }
+  display: flex;
+  position: absolute;
+  left: 20px;
+  top: 5px;
+  background-color: rgba(0, 0, 0, 0.77);
+  border-radius: 25%;
+  color: rgb(255, 255, 255);
+  padding: 6px;
+  font-size: small;
+  z-index: 9999;
+  width: 20px;
+  height: 20px;
+  align-items: center;
+  justify-content: center;
+}
 
 /* 개봉예정작 끝 */
 
@@ -252,101 +271,105 @@
 /* 감독 모음작 시작 */
 
 .DirectorMovie_box_wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 80%;
-    margin-left: 10%;
-    justify-content: flex-start;
-    margin-top: 50px;
-  }
-  
-  .DirectorMovie_box {
-    display: flex;
-    width: 100%;
-    flex-wrap: wrap;
-    justify-content: center;
-    justify-content: flex-start;
-    height: 500px;
-    flex-direction: column;
-  }
-  
-  .DirectorMovie_box_header {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    width: 100%;
-    flex: 1;
-  }
-  
-  .DirectorMovie_box_info {
-    width: 100%;
-    flex: 9;
-    margin-top: 10px;
-  }
-
-  .DirectorMovie_mainBox {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 80%;
+  margin-left: 10%;
+  justify-content: flex-start;
+  margin-top: 50px;
 }
-  
-  .DirectorMovie_box_header h3 {
-    margin-left: 20px;
-    color: black;
-  }
-  
-  .DirectorMovie_poster {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-    position: relative;
-  }
 
-  .DirectorMovie_content {
-    width: 100%;
-    height: 380px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+.DirectorMovie_box {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: center;
+  justify-content: flex-start;
+  height: 500px;
+  flex-direction: column;
+}
 
-.DirectorMovie_content > img {
-    width: 90%;
-    height: 100%;
-  }
+.DirectorMovie_box_header {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
+  flex: 1;
+}
+
+.DirectorMovie_box_info {
+  width: 100%;
+  flex: 9;
+  margin-top: 10px;
+}
+
+.DirectorMovie_mainBox {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  overflow: visible;
+}
+
+.DirectorMovie_box_header h3 {
+  margin-left: 20px;
+  color: black;
+}
+
+.DirectorMovie_poster {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  position: relative;
+}
+
+.DirectorMovie_content {
+  width: 100%;
+  height: 380px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.DirectorMovie_content>img {
+  border-radius: 5px;
+  width: 90%;
+  height: 100%;
+}
 
 
 .DirectorMovie_bottom {
-    display: flex;
-    flex-direction: column;
-    color: black;
-    font-size: small;
-    padding-left: 20px;
+  position: relative;
+  top: 3.5px;
+  display: flex;
+  flex-direction: column;
+  color: black;
+  font-size: small;
+  padding-left: 20px;
 }
 
 .DirectorMovie_number {
-    display: flex;
-    position: absolute;
-    left: 20px;
-    top: 5px;
-    background-color: rgba(0, 0, 0, 0.77);
-    border-radius: 25%; 
-    color: rgb(255, 255, 255);
-    padding: 6px; 
-    font-size: small;
-    z-index: 9999;
-    width: 20px; 
-    height: 20px; 
-    align-items: center;
-    justify-content: center;
-  }
+  display: flex;
+  position: absolute;
+  left: 20px;
+  top: 5px;
+  background-color: rgba(0, 0, 0, 0.77);
+  border-radius: 25%;
+  color: rgb(255, 255, 255);
+  padding: 6px;
+  font-size: small;
+  z-index: 9999;
+  width: 20px;
+  height: 20px;
+  align-items: center;
+  justify-content: center;
+}
 
 
 /* 감독 모음작 끝 */
@@ -354,202 +377,215 @@
 /* 배우 모음작 시작 */
 
 .ActorMovie_box_wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 80%;
-    margin-left: 10%;
-    justify-content: flex-start;
-    margin-top: 50px;
-  }
-  
-  .ActorMovie_box {
-    display: flex;
-    width: 100%;
-    flex-wrap: wrap;
-    justify-content: center;
-    justify-content: flex-start;
-    height: 500px;
-    flex-direction: column;
-  }
-  
-  .ActorMovie_box_header {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    width: 100%;
-    flex: 1;
-  }
-  
-  .ActorMovie_box_info {
-    width: 100%;
-    flex: 9;
-    margin-top: 10px;
-  }
-
-  .ActorMovie_mainBox {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 80%;
+  margin-left: 10%;
+  justify-content: flex-start;
+  margin-top: 50px;
 }
-  
-  .ActorMovie_box_header h3 {
-    margin-left: 20px;
-    color: black;
-  }
-  
-  .ActorMovie_poster {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-    position: relative;
-  }
 
-  .ActorMovie_content {
-    width: 100%;
-    height: 380px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+.ActorMovie_box {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: center;
+  justify-content: flex-start;
+  height: 500px;
+  flex-direction: column;
+}
 
-.ActorMovie_content > img {
-    width: 90%;
-    height: 100%;
-  }
+.ActorMovie_box_header {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
+  flex: 1;
+}
+
+.ActorMovie_box_info {
+  width: 100%;
+  flex: 9;
+  margin-top: 10px;
+}
+
+.ActorMovie_mainBox {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+}
+
+.ActorMovie_box_header h3 {
+  top: 2.5px;
+  margin-left: 20px;
+  color: black;
+}
+
+.ActorMovie_poster {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  position: relative;
+}
+
+.ActorMovie_content {
+  width: 100%;
+  height: 380px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.ActorMovie_content>img {
+  border-radius: 5px;
+  width: 90%;
+  height: 100%;
+}
 
 
 .ActorMovie_bottom {
-    display: flex;
-    flex-direction: column;
-    color: black;
-    font-size: small;
-    padding-left: 20px;
+  position: relative;
+  top: 2.5px;
+  display: flex;
+  flex-direction: column;
+  color: black;
+  font-size: small;
+  padding-left: 20px;
 }
 
 .ActorMovie_number {
-    display: flex;
-    position: absolute;
-    left: 20px;
-    top: 5px;
-    background-color: rgba(0, 0, 0, 0.77);
-    border-radius: 25%; 
-    color: rgb(255, 255, 255);
-    padding: 6px; 
-    font-size: small;
-    z-index: 9999;
-    width: 20px; 
-    height: 20px; 
-    align-items: center;
-    justify-content: center;
-  }
+  display: flex;
+  position: absolute;
+  left: 20px;
+  top: 5px;
+  background-color: rgba(0, 0, 0, 0.77);
+  border-radius: 25%;
+  color: rgb(255, 255, 255);
+  padding: 6px;
+  font-size: small;
+  z-index: 9999;
+  width: 20px;
+  height: 20px;
+  align-items: center;
+  justify-content: center;
+}
 
 /* 배우 모음작 끝 */
 
 /* 장르 시작 */
 
 .Genre_box_wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 80%;
-    margin-left: 10%;
-    justify-content: flex-start;
-    margin-top: 50px;
-  }
-  
-  .Genre_box {
-    display: flex;
-    width: 100%;
-    flex-wrap: wrap;
-    justify-content: center;
-    justify-content: flex-start;
-    height: 500px;
-    flex-direction: column;
-  }
-  
-  .Genre_box_header {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    width: 100%;
-    flex: 1;
-  }
-  
-  .Genre_box_info {
-    width: 100%;
-    flex: 9;
-    margin-top: 10px;
-  }
-
-  .Genre_mainBox {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 80%;
+  margin-left: 10%;
+  justify-content: flex-start;
+  margin-top: 50px;
 }
-  
-  .Genre_box_header h3 {
-    margin-left: 20px;
-    color: black;
-  }
-  
-  .Genre_poster {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-    position: relative;
-  }
 
-  .Genre_content {
-    width: 100%;
-    height: 380px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+.Genre_box {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: center;
+  justify-content: flex-start;
+  height: 500px;
+  flex-direction: column;
+}
 
-.Genre_content > img {
-    width: 90%;
-    height: 100%;
-  }
+.Genre_box_header {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
+  flex: 1;
+}
+
+.Genre_box_info {
+  width: 100%;
+  flex: 9;
+  margin-top: 10px;
+}
+
+.Genre_mainBox {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+}
+
+.Genre_box_header h3 {
+  margin-left: 20px;
+  color: black;
+}
+
+.Genre_poster {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  position: relative;
+}
+
+.Genre_content {
+  width: 100%;
+  height: 380px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.Genre_content>img {
+  border-radius: 5px;
+  width: 90%;
+  height: 100%;
+}
 
 
 .Genre_bottom {
-    display: flex;
-    flex-direction: column;
-    color: black;
-    font-size: small;
-    padding-left: 20px;
+  position: relative;
+  top: 2.5px;
+  display: flex;
+  flex-direction: column;
+  color: black;
+  font-size: small;
+  padding-left: 20px;
+}
+
+.Genre_bottom_h3 {
+  color: rgb(120, 120, 120);
+  font-size: 12px;
+  font-weight: normal;
 }
 
 .Genre_number {
-    display: flex;
-    position: absolute;
-    left: 20px;
-    top: 5px;
-    background-color: rgba(0, 0, 0, 0.77);
-    border-radius: 25%; 
-    color: rgb(255, 255, 255);
-    padding: 6px; 
-    font-size: small;
-    z-index: 9999;
-    width: 20px; 
-    height: 20px; 
-    align-items: center;
-    justify-content: center;
-  }
+  display: flex;
+  position: absolute;
+  left: 20px;
+  top: 5px;
+  background-color: rgba(0, 0, 0, 0.77);
+  border-radius: 25%;
+  color: rgb(255, 255, 255);
+  padding: 6px;
+  font-size: small;
+  z-index: 9999;
+  width: 20px;
+  height: 20px;
+  align-items: center;
+  justify-content: center;
+}
 
 /* 장르 끝 */
 
@@ -568,7 +604,7 @@
   margin-top: 60px;
   background-color: rgb(247, 247, 247);
   display: flex;
-  align-items: center; 
+  align-items: center;
 }
 
 .SearchSuccess_result_wrapper {
@@ -579,7 +615,7 @@
 .SearchSuccess_result {
   width: 80%;
   margin-left: 10%;
-  justify-content: center; 
+  justify-content: center;
   text-align: center;
 }
 
@@ -591,7 +627,7 @@
 
 .SearchSuccess_result_box {
   width: 80%;
-  margin: 20px auto; 
+  margin: 20px auto;
   height: 400px;
 }
 
