fix: 230804_fix_react_terminal_UserComment
(152:3) autoprefixer: You should write display: flex by final spec instead of display: box
오류 해결

--- a/reelreview/src/css/profile/UserComment.module.css
+++ b/reelreview/src/css/profile/UserComment.module.css
@@ -149,7 +149,7 @@
   text-overflow: ellipsis;
   display: -webkit-box;
   display: -ms-box;
-  display: box;
+  display: flex;
   -webkit-line-clamp: 5;
   -ms-line-clamp: 5;
   line-clamp: 5;
