design: 230810_change_footer_sns_logo
- 폰트 색상 변경
- 로고 색상 변경 :  #a5a5a7 → #848485

--- a/frontend/src/css/Footer/Footer.css
+++ b/frontend/src/css/Footer/Footer.css
@@ -55,6 +55,13 @@
   color: #a5a5a7;
 }
 
+.footerText2 {
+  list-style: none;
+  display: inline-block;
+  margin-right: 20px;
+  color: #848485;
+}
+
 .question-box {
   width: 100%;
   height: 800px;
