--- a/frontend/src/css/Footer/Footer.css
+++ b/frontend/src/css/Footer/Footer.css
@@ -1,7 +1,8 @@
 .footer-container {
   width: 100%;
+  height: 331px;
+  bottom: 0;
   background-color: #1c1d1f;
-  height: 300px;
   margin-top: 100px;
 }
 
